Update portfolio site

--- a/cv.html
+++ b/cv.html
@@ -33,6 +33,14 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Curriculum Vitae  <span class="sr-only">(current)</span></a>
             </li>
+			<li class="nav-item">
+              <a class="nav-link" href="architecture.html">Architecture </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link" href="development.html">Development </a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link" href="administration.html">Administration </a>
           </ul>
         </div>
       </nav>
