--- a/administration.html
+++ b/administration.html
@@ -114,51 +114,51 @@
        </div>
 	  </div>
 
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
+      <!-- Carousel -->
+	  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+	  
+	    <!-- Carousel contents -->
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="container">
-              <div class="carousel-caption">
-                <h1>Creative solutions to difficult problems.</h1>
-                <p>Have a computer science problem that needs help solving?</p>
-                <p><a class="btn btn-lg btn-primary" href="#" role="button" data-toggle="modal" data-target="#myModal">Get in touch</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="carousel-caption">
-                <h1>Making life easier, with code.</h1>
-                <p>Use modern technology to your benefit.</p>
+            <div class="carousel-item active">
+               <img class="d-block w-100 carousel-background-image" src="static/img/carousel1.jpg" alt="First slide">
+			   <div class="carousel-caption">
+                <h1 class="carousel-text">Making life easier, with code.</h1>
+                <p class="carousel-text">Use modern technology to your benefit.</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button" data-toggle="modal" data-target="#myModal">Reach out</a></p>
               </div>
             </div>
-          </div>
-          <div class="carousel-item">
-		    <div class="container">
-              <div class="carousel-caption">
-                <h1>Spreading the reach of good business.</h1>
-                <p>Advance your business interests with simple and elegant software.</p>
+            <div class="carousel-item">
+               <img class="d-block w-100 carousel-background-image" src="static/img/carousel2.jpg" alt="Second slide">
+			   <div class="carousel-caption">
+                <h1 class="carousel-text">Creative solutions to difficult problems.</h1>
+                <p class="carousel-text">Have a computer science problem that needs help solving?</p>
+                <p><a class="btn btn-lg btn-primary" href="#" role="button" data-toggle="modal" data-target="#myModal">Get in touch</a></p>
+               </div>
+            </div>
+            <div class="carousel-item">
+               <img class="d-block w-100 carousel-background-image" src="static/img/carousel3.jpg" alt="Third slide">
+			   <div class="carousel-caption">
+                <h1 class="carousel-text">Spreading the reach of good business.</h1>
+                <p class="carousel-text">Advance your business interests with simple and elegant software.</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button" data-toggle="modal" data-target="#myModal">Talk to me</a></p>
               </div>
             </div>
-          </div>
         </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
+		<!-- End carousel contents -->
+		
+		<!-- Carousel controls -->
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+           <span class="carousel-control-next-icon" aria-hidden="true"></span>
+           <span class="sr-only">Next</span>
         </a>
+		<!-- End carousel controls -->
+		
       </div>
-
+	  <!-- End carousel -->
 
       <!-- Marketing messaging and featurettes
       ================================================== -->
