Add simply ml coming soon page

--- a/index.html
+++ b/index.html
@@ -205,20 +205,20 @@
         </div>
 
         <hr class="featurette-divider">
-<!--
+
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">University of Pretoria <br><span class="text-muted">Mobile Application Development Course</span></h2>
-			<p class="lead">2012</p>
-            <p class="lead">MAD Challenge Course in cooperation with Research in Motion, finished 3rd in course</p>
+            <h2 class="featurette-heading">Simply.ml<br><span class="text-muted">Machine Learning Dataset Classification</span></h2>
+			<p class="lead">ETA 2019</p>
+            <p class="lead">Web & Mobile Web application to allow for the classification of ML datasets</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" src="static/img/up_logo.jpeg" alt="Generic placeholder image">
+            <a href="simply.ml/simply_ml.html"><img class="featurette-image img-fluid mx-auto" src="static/img/simply.ml.jpg" alt="Generic placeholder image"></a>
           </div>
         </div>
 
         <hr class="featurette-divider">
-
+<!--
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">Pretoria Boys High School <br><span class="text-muted">Secondary School</span></h2>
