update simply ml link

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <p class="lead">Web & Mobile Web application to allow for the classification of ML datasets</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <a href="simply.ml/simply_ml.html"><img class="featurette-image img-fluid mx-auto" src="static/img/simply.ml.jpg" alt="Generic placeholder image"></a>
+            <a href="simply.ml/index.html"><img class="featurette-image img-fluid mx-auto" src="static/img/simply.ml.jpg" alt="Generic placeholder image"></a>
           </div>
         </div>
 
