add unmap, comments

--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
 
         <hr class="featurette-divider">
 
+		<!-- FRIDAYSUITE BEGIN -->
+		
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">Fridaysuite <br><span class="text-muted">Business Operations </span></h2>
@@ -203,19 +205,42 @@
             <a href="https://dev.fridaysuite.com"><img class="featurette-image img-fluid mx-auto" src="static/img/friday_logo_fitted.png" alt="Generic placeholder image"></a>
           </div>
         </div>
+		
+		<!-- FRIDAYSUITE END -->
 
         <hr class="featurette-divider">
 
+		<!-- SIMPLY.ML BEGIN -->
+		
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Simply.ml<br><span class="text-muted">Machine Learning Dataset Classification</span></h2>
 			<p class="lead">ETA 2019</p>
-            <p class="lead">Web & Mobile Web application to allow for the classification of ML datasets</p>
+            <p class="lead">Web & mobile-web application to allow for the classification of ML datasets</p>
           </div>
           <div class="col-md-5 order-md-1">
             <a href="simply.ml/index.html"><img class="featurette-image img-fluid mx-auto" src="static/img/simply.ml.jpg" alt="Generic placeholder image"></a>
           </div>
         </div>
+		
+		<!-- SIMPLY.ML END -->
+
+        <hr class="featurette-divider">
+		
+		<!-- UNMAP BEGIN -->
+		
+		<div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading">Unmap <br><span class="text-muted">Feature-based POI search </span></h2>
+			<p class="lead">ETA 2019</p>
+            <p class="lead">Web & mobile-web app designed to enable the discovery of locations based on features, using natural language processing to identify user intent (using hashtags as an interface)</p>
+          </div>
+          <div class="col-md-5">
+            <img class="featurette-image img-fluid mx-auto" src="static/img/unmap_logo.jpg" alt="Generic placeholder image">
+          </div>
+        </div>
+		
+		<!-- UNMAP END -->
 
         <hr class="featurette-divider">
 <!--
