add clickwash and more links

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <div class="col-md-7">
             <h2 class="featurette-heading">Fridaysuite <br><span class="text-muted">Business Operations </span></h2>
 			<p class="lead">2015 - 2018</p>
-            <p class="lead">Webapp built from the ground up to facilitate the operations of small-medium sized manufacturing firms</p>
+            <p class="lead">Microservices-based webapp built from the ground up to facilitate the operations of small-medium sized manufacturing firms</p>
           </div>
           <div class="col-md-5">
             <a href="https://dev.fridaysuite.com"><img class="featurette-image img-fluid mx-auto" src="static/img/friday_logo_fitted.png" alt="Generic placeholder image"></a>
@@ -219,7 +219,7 @@
             <p class="lead">Web & mobile-web application to allow for the classification of ML datasets</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <a href="simply.ml/index.html"><img class="featurette-image img-fluid mx-auto" src="static/img/simply.ml.jpg" alt="Generic placeholder image"></a>
+            <a href="https://shinroo.github.io/simply.ml/index.html"><img class="featurette-image img-fluid mx-auto" src="static/img/simply.ml.jpg" alt="Generic placeholder image"></a>
           </div>
         </div>
 		
@@ -231,16 +231,33 @@
 		
 		<div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">Unmap <br><span class="text-muted">Feature-based POI search </span></h2>
+            <h2 class="featurette-heading">Unmap <br><span class="text-muted">Feature-based POI Search </span></h2>
 			<p class="lead">ETA 2019</p>
             <p class="lead">Web & mobile-web app designed to enable the discovery of locations based on features, using natural language processing to identify user intent (using hashtags as an interface)</p>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" src="static/img/unmap_logo.jpg" alt="Generic placeholder image">
+            <a href="https://shinroo.github.io/unmap/index.html"><img class="featurette-image img-fluid mx-auto" src="static/img/unmap_logo.jpg" alt="Generic placeholder image"></a>
           </div>
         </div>
 		
 		<!-- UNMAP END -->
+
+        <hr class="featurette-divider">
+		
+		<!-- CLICKWASH BEGIN -->
+		
+		 <div class="row featurette">
+          <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading">ClickWash<br><span class="text-muted">Distributed Economy Car Washing</span></h2>
+			<p class="lead">ETA 2019</p>
+            <p class="lead">Web & mobile-web application combining distributed economic principles and car washing. Route finding using computer vision algorithms</p>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <a href="https://clickwash.de"><img class="featurette-image img-fluid mx-auto" src="static/img/clickwash-logo.jpeg" alt="Generic placeholder image"></a>
+          </div>
+        </div>
+		
+		<!-- CLICKWASH END -->
 
         <hr class="featurette-divider">
 <!--
