--- a/administration.html
+++ b/administration.html
@@ -120,7 +120,8 @@
 	    <!-- Carousel contents -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-               <img class="d-block w-100 carousel-background-image" src="static/img/carousel1.jpg" alt="First slide">
+			   <img class="d-block w-100 carousel-background-image image_full" src="static/img/carousel.jpg" alt="">
+			   <img class="d-block w-100 carousel-background-image image_mobile" src="static/img/carousel-mobile.jpg" alt="">
 			   <div class="carousel-caption">
                 <h1 class="carousel-text">Making life easier, with code.</h1>
                 <p class="carousel-text">Use modern technology to your benefit.</p>
@@ -128,7 +129,8 @@
               </div>
             </div>
             <div class="carousel-item">
-               <img class="d-block w-100 carousel-background-image" src="static/img/carousel2.jpg" alt="Second slide">
+			   <img class="d-block w-100 carousel-background-image image_full" src="static/img/carousel.jpg" alt="">
+			   <img class="d-block w-100 carousel-background-image image_mobile" src="static/img/carousel-mobile.jpg" alt="">
 			   <div class="carousel-caption">
                 <h1 class="carousel-text">Creative solutions to difficult problems.</h1>
                 <p class="carousel-text">Have a computer science problem that needs help solving?</p>
@@ -136,7 +138,8 @@
                </div>
             </div>
             <div class="carousel-item">
-               <img class="d-block w-100 carousel-background-image" src="static/img/carousel3.jpg" alt="Third slide">
+			   <img class="d-block w-100 carousel-background-image image_full" src="static/img/carousel.jpg" alt="">
+			   <img class="d-block w-100 carousel-background-image image_mobile" src="static/img/carousel-mobile.jpg" alt="">
 			   <div class="carousel-caption">
                 <h1 class="carousel-text">Spreading the reach of good business.</h1>
                 <p class="carousel-text">Advance your business interests with simple and elegant software.</p>
