--- a/cv.html
+++ b/cv.html
@@ -160,8 +160,12 @@
 
       <div class="container marketing">
 
-        <div id="myCV">
-			<embed src="static/pdfs/cv.pdf" width="100%" height="500"> </embed>
+        <div id="myCV" class="cv_full">
+			<embed src="static/pdfs/cv.pdf" width="100%" height="500"></embed>
+		</div>
+		
+		<div id="myCV" class="cv_mobile">
+			<a href="static/pdfs/cv.pdf"><h2 class="featurette-heading">View CV (PDF)</h2></a>
 		</div>
 
       </div> 
