--- a/administration.html
+++ b/administration.html
@@ -64,7 +64,7 @@
              <!-- Modal body -->
              <div class="modal-body">
             
-			   <form action=action="https://jumprock.co/mail/shinroo" method="post">
+			   <form action="https://jumprock.co/mail/shinroo" method="post">
 
 				 <div class="row">
 				 
