--- a/development.html
+++ b/development.html
@@ -66,7 +66,7 @@
              <div class="modal-body">
             
 
-			   <form action=action="https://jumprock.co/mail/shinroo" method="post">
+			   <form action="https://jumprock.co/mail/shinroo" method="post">
 
 				 <div class="row">
 				 
