--- a/cv.html
+++ b/cv.html
@@ -63,7 +63,7 @@
              <!-- Modal body -->
              <div class="modal-body">
               
-			 <form action=action="https://jumprock.co/mail/shinroo" method="post">
+			 <form action="https://jumprock.co/mail/shinroo" method="post">
 
 				 <div class="row">
 				 
