fix nav and cv.pdf

--- a/index.html
+++ b/index.html
@@ -16,25 +16,24 @@
 <body>
 
 	<header>
-		<h2><a href="#">Portfolio</a></h2>
+		<h2>Portfolio</h2>
 		<nav>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Products</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contacts</a></li>
+			<li><a href="#portfolio">Portfolio</a></li>
+			<li><a href="#skillset">Skillset</a></li>
+			<li><a href="#contact">Contact</a></li>
 		</nav>
 	</header>
 
 
-	<section class="hero">
+	<section id="home" class="hero">
 		<div class="background-image" style="background-image: url(assets/img/python.jpg);"></div>
 		<h1>Robert Focke</h1>
 		<h3>Software Developer</h3>
-		<a href="https://shinroo.github.io/static/pdfs/cv.pdf" class="btn">Curriculum Vitae</a>
+		<a href="assets/pdf/cv_robert_focke.pdf" class="btn">Curriculum Vitae</a>
 	</section>
 
 
-	<section class="our-work">
+	<section id="portfolio" class="our-work">
 		<h3 class="title">Portfolio</h3>
 		<p>Projects I have contributed to and companies I have worked for</p>
 		<hr>
@@ -51,7 +50,7 @@
 	</section>
 	
 
-	<section class="features">
+	<section id="contact" class="features">
 		<h3 class="title">Skillset</h3>
 		<p>What I bring to the table</p>
 		<hr>
