--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				</ul>
 			</li>
 			<li>
-				<i class="fa fa-code-fork"></i>
+				<i class="fas fa-sitemap"></i>
 				<h4>Architecture</h4>
 				<ul>
 					<li>Modular Development</li>
@@ -102,8 +102,8 @@
 
 	<footer>
 		<ul>
-			<li><a href="https://www.linkedin.com/in/robertfocke/"><i class="fa fa-linkedin-square"></i></a></li>
-			<li><a href="https://github.com/shinroo"><i class="fa fa-github-square""></i></a></li>
+			<li><a href="https://www.linkedin.com/in/robertfocke/"><i class="fab fa-linkedin"></i></a></li>
+			<li><a href="https://github.com/shinroo"><i class="fab fa-github""></i></a></li>
 		</ul>
 	</footer>
 
