update companies and cv

--- a/index.html
+++ b/index.html
@@ -38,16 +38,20 @@
 		<hr>
 
 		<ul class="grid" id="projects-logos">
+
+			<li class="rectangle" style="background-image: url(assets/img/dimr_logo.jpg);"></li>
 			<li class="square" style="background-image: url(assets/img/friday_logo_fitted.png);"></li>
 			<li class="square" style="background-image: url(assets/img/clickwash-logo.jpeg);"></li>
 			<li class="square" style="background-image: url(assets/img/unmap_logo.jpg);"></li>
-			
+
+			<li class="square" style="background-image: url(assets/img/hikaya.png);"></li>
 			<li class="square" style="background-image: url(assets/img/logo_sap.png);"></li>
 			<li class="square" style="background-image: url(assets/img/nrc.png);"></li>
 			<li class="rectangle" style="background-image: url(assets/img/hometogo.png);"></li>
+
 		</ul>
 	</section>
-	
+
 
 	<section id="contact" class="features">
 		<h3 class="title">Skillset</h3>
@@ -91,7 +95,7 @@
 
 
 	<section class="contact">
-		<h3 class="title">Contact Me</h3>	
+		<h3 class="title">Contact Me</h3>
 		<p>Reach out to me on Github or Linkedin or send me an email.</p>
 		<hr>
 
