--- a/index.html
+++ b/index.html
@@ -124,8 +124,10 @@
 		<h4 class="showcase-gap title">Development of NRC Core Web Application</h4>
 		<h5 class="showcase-gap showcase-light ">Software Engineer at Norwegian Refugee Council Digitalisation Team from 2019 to present</h5>
 
-		<p>Currently working on an internal web application for use by frontline aid workers manage interactions with refugees and internally displaced people.</p>
-		<p>I work across NRCs stack on this application from data modelling in Directus (an open source headless CMS), writing Angular code for the frontend and writing integration tests (especially to ensure the custom security implementations for segregated visibility and access work as intended). I am also involved in the hosting of the application on Kubernetes (Azure-based).</p>
+		<p>Involved in exploration phase, creating proof of concept applications on Salesforce, Anvil and Directus</p>
+		<p>Full-stack golang and javascript development on final open source implementation</p>
+		
+		<p>More information about this project can be found here: ![NRC Core](https://github.com/nrc-no/core)
 
 		<hr>
 
