--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		<p>Involved in exploration phase, creating proof of concept applications on Salesforce, Anvil and Directus</p>
 		<p>Full-stack golang and javascript development on final open source implementation</p>
 		
-		<p>More information about this project can be found here: ![NRC Core](https://github.com/nrc-no/core)
+		<p>More information about this project can be found <a href="https://github.com/nrc-no/core">here</a>
 
 		<hr>
 
