--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
 
 		<h4 class="showcase-gap title">Development of NRC Core Web Application</h4>
 		<h5 class="showcase-gap showcase-light ">Software Engineer at Norwegian Refugee Council Digitalisation Team from 2019 to present</h5>
-
+		
+		<p>Beneficiary identity, case and service management tool designed to make data collection easier and safer for the Norwegian Refugee Councils operations around the world.</p
 		<p>Involved in exploration phase, creating proof of concept applications on Salesforce, Anvil and Directus</p>
 		<p>Full-stack golang and javascript development on final open source implementation</p>
 		
