--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		
 		<p>Beneficiary identity, case and service management tool designed to make data collection easier and safer for the Norwegian Refugee Councils operations around the world.</p
 		<p>Involved in exploration phase, creating proof of concept applications on Salesforce, Anvil and Directus</p>
-		<p>Full-stack golang and javascript development on final open source implementation</p>
+		<p>Full-stack Golang and JavaScript development on final open source implementation</p>
 		
 		<p>More information about this project can be found <a href="https://github.com/nrc-no/core">here</a>
 
