--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<i class="fa fa-code"></i>
 				<h4>Development</h4>
 				<ul>
-					<li>Python, C++, JavaScript</li>
+					<li>Python, Golang, JavaScript</li>
 					<li>Test-Driven Development</li>
 					<li>Clean, Maintainable Code</li>
 					<li>MySQL, PostgresSQL, MongoDB</li>
