add demo section

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
 
 	<header>
-		<h2>Portfolio</h2>
+		<h2>Showcase</h2>
 		<nav>
 			<li><a href="#portfolio">Portfolio</a></li>
 			<li><a href="#skillset">Skillset</a></li>
 			<li><a href="#cases">Case Studies</a></li>
-			<li><a href="https://shinroo.github.io/iss-tracker">ISS Tracker</a></li>
+			<li><a href="#demo">Demos</a></li>
 			<li><a href="#contact">Contact</a></li>
 		</nav>
 	</header>
@@ -50,7 +50,6 @@
 
 		</ul>
 	</section>
-
 
 	<section id="skillset" class="features">
 		<h3 class="title">Skillset</h3>
@@ -154,6 +153,20 @@
 
 	</section>
 
+	<section id="demo" class="features">
+		<h3 class="title">Demos</h3>
+		<p>A selection of small applications which can be viewed online</p>
+		<hr>
+
+		<h4 class="showcase-gap title">International Space Station Tracker</h4>
+		<h5 class="showcase-gap showcase-light ">Minimalist page with Leaflet.js and wheretheiss.at API</h5>
+
+		<p>Shows the location of the International Space Station on an OpenStreetMap</p>
+
+		<a href="https://hometogo.de"><div class="rectangle" style="background-image: url(assets/img/hometogo.png);"></div></a>
+
+		<hr>
+	</section>
 
 	<section id="contact" class="contact">
 		<h3 class="title">Contact Me</h3>
