--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 		<p>Shows the location of the International Space Station on an OpenStreetMap</p>
 
-		<a href="https://hometogo.de"><div class="rectangle" style="background-image: url(assets/img/hometogo.png);"></div></a>
+		<a href="https://shinroo.github.io/iss-tracker"><div class="rectangle" style="background-image: url(assets/img/iss-tracker.png);"></div></a>
 
 		<hr>
 	</section>
