switch from div to img

--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@
 
 		<p>Shows the location of the International Space Station on an OpenStreetMap</p>
 
-		<a href="https://shinroo.github.io/iss-tracker"><div class="rectangle" style="background-image: url(assets/img/iss-tracker.png);"></div></a>
+		<a href="https://shinroo.github.io/iss-tracker">
+			<img src="/assets/img/iss-tracker.png" style="width: 350px;">
+		</a>
 
 		<hr>
 	</section>
