--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 	<footer>
 		<ul>
 			<li><a href="https://www.linkedin.com/in/robertfocke/"><i class="fab fa-linkedin"></i></a></li>
-			<li><a href="https://github.com/shinroo"><i class="fab fa-github""></i></a></li>
+			<li><a href="https://github.com/shinroo"><i class="fab fa-github"></i></a></li>
 		</ul>
 	</footer>
 
