add muzz, update CV, add mesg.ai case study

--- a/index.html
+++ b/index.html
@@ -53,14 +53,17 @@
 			<a href="https://sap.com">
 				<li class="rectangle" style="background-image: url(assets/img/logo_sap.svg);"></li>
 			</a>
-			<a href="https://nrc.no">
-				<li class="square" style="background-image: url(assets/img/nrc.png);"></li>
-			</a>
 			<a href="https://hometogo.de">
 				<li class="rectangle" style="background-image: url(assets/img/hometogo.png);"></li>
 			</a>
 			<a href="https://mesg.ai">
 				<li class="rectangle" style="background-image: url(assets/img/mesg_ai.svg);"></li>
+			</a>
+			<a href="https://nrc.no">
+				<li class="square" style="background-image: url(assets/img/nrc.png);"></li>
+			</a>
+			<a href="https://muzz.com/en-GB">
+				<li class="rectangle" style="background-image: url(assets/img/muzz.png);"></li>
 			</a>
 
 		</ul>
@@ -77,24 +80,20 @@
 				<h4>Operations</h4>
 				<ul>
 					<li>Kubernetes</li>
+					<li>Serverless</li>
 					<li>Docker, Docker-Compose</li>
-					<li>On-Site and Cloud Servers</li>
-					<li>Relational & NoSQL Databases</li>
-					<li>Deployment</li>
-					<li>Testing</li>
-					<li>Logging & Monitoring</li>
+					<li>Proficient in using Amazon Web Services</li>
+					<li>Infrastructure as Code with Terraform</li>
 				</ul>
 			</li>
 			<li>
 				<i class="fa fa-code"></i>
 				<h4>Development</h4>
 				<ul>
-					<li>Python, Golang, JavaScript</li>
-					<li>Test-Driven Development</li>
+					<li>Python, Golang</li>
 					<li>Clean, Maintainable Code</li>
 					<li>MySQL, PostgresSQL, MongoDB</li>
-					<li>Angular, Flask, Node.js</li>
-					<li>Airflow, NiFi, Metabase</li>
+					<li>Airflow, Metabase</li>
 				</ul>
 			</li>
 			<li>
@@ -104,6 +103,7 @@
 					<li>Modular Development</li>
 					<li>Leveraging High Quality Open Source Solutions</li>
 					<li>Best Practices</li>
+					<li>Automated documentation</li>
 				</ul>
 			</li>
 			</div>
@@ -186,6 +186,14 @@
 		<p>Web scraping, data engineering and full-stack web development (Go + React) and operations delivering an
 			online children's library and publishing system, focussed on diversity.</p>
 		<p>More information about this project can be found <a href="https://github.com/reading-tribe/zula">here</a></p>
+
+		<hr>
+
+		<h4 class="showcase-gap title">Implementation of Near Real-time Email Analysis API</h4>
+		<h5 class="showcase-gap showcase-light ">Backend Platform Engineer at Mesg.ai</h5>
+
+		<p>Worked with the CTO to implement a concurrent email analysis feature using Go that returned results in under 1ms when deployed to AWS lambda.</p>
+		<p>Various NLP tasks would be run as Goroutines to be scheduled concurrently, including readability analysis, tokenization and other proprietary techniques.</p>
 
 		<hr>
 
