--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header>
 		<h2>Showcase</h2>
 		<nav>
-			<li><a href="#portfolio">Portfolio</a></li>
+			<li><a href="#portfolio">Contributions</a></li>
 			<li><a href="#skillset">Skillset</a></li>
 			<li><a href="#cases">Case Studies</a></li>
 			<li><a href="#talks">Talks</a></li>
@@ -38,23 +38,25 @@
 
 
 	<section id="portfolio" class="our-work">
-		<h3 class="title">Portfolio</h3>
-		<p>Projects I have contributed to and companies I have worked for</p>
+		<h3 class="title">Contributions</h3>
+		<img src="https://github-readme-stats.vercel.app/api?username=shinroo&count_private=true&show_icons=true&hide=contribs">
+		<br>
 		<hr>
+		<p>Projects I have contributed to and companies I have worked for</p>
 
 		<ul class="grid" id="projects-logos">
 
 			<a href="https://hikaya.io">
-				<li class="square" style="background-image: url(assets/img/hikaya.png);"></li>
+				<li class="square" style="background-image: url(assets/img/hikaya-logo.svg);"></li>
 			</a>
 			<a href="https://www.institut-fuer-menschenrechte.de/">
 				<li class="rectangle" style="background-image: url(assets/img/dimr_logo.jpg);"></li>
 			</a>
-			<a href="https://sap.com">
-				<li class="rectangle" style="background-image: url(assets/img/logo_sap.svg);"></li>
-			</a>
 			<a href="https://hometogo.de">
-				<li class="rectangle" style="background-image: url(assets/img/hometogo.png);"></li>
+				<li class="square" style="background-image: url(assets/img/hometogo-square-white.webp);"></li>
+			</a>
+			<a href="https://sap.com">
+				<li class="square" style="background-image: url(assets/img/sap-icn.png);"></li>
 			</a>
 			<a href="https://mesg.ai">
 				<li class="rectangle" style="background-image: url(assets/img/mesg_ai.svg);"></li>
@@ -65,8 +67,12 @@
 			<a href="https://muzz.com/en-GB">
 				<li class="rectangle" style="background-image: url(assets/img/muzz.png);"></li>
 			</a>
+			<a href="https://github.com/reading-tribe">
+				<li class="square" style="background-image: url(assets/img/zula.png);"></li>
+			</a>
 
 		</ul>
+		
 	</section>
 
 	<section id="skillset" class="features">
@@ -155,7 +161,7 @@
 		<hr>
 
 		<h4 class="showcase-gap title">Development of NRC Core Web Application</h4>
-		<h5 class="showcase-gap showcase-light ">Software Engineer at Norwegian Refugee Council Digitalisation Team from
+		<h5 class="showcase-gap showcase-light ">Software Engineer at Norwegian Refugee Council from
 			2019 to 2021</h5>
 
 		<p>Beneficiary identity, case and service management tool designed to make data collection easier and safer for
@@ -164,7 +170,7 @@
 		<p>Full-stack Golang and JavaScript development on final open source implementation</p>
 		<p>More information about this project can be found <a href="https://github.com/nrc-no/core">here</a>
 
-			<hr>
+		<hr>
 
 		<h4 class="showcase-gap title">Web Scraping & Visualisation Project</h4>
 		<h5 class="showcase-gap showcase-light ">Data Engineer at Deutsches Institut für Menschenrechte in 2020</h5>
@@ -175,6 +181,17 @@
 		<p>Installed the PG_TRIGRAM PostgresSQL addon to be able to index text columns more efficiently thus speeding up
 			the search functionalities on researcher's dashboard tools.</p>
 		<p>The project was hosted on Digital Ocean's Kubernetes service.</p>
+
+		<hr>
+
+		<h4 class="showcase-gap title">Writing Data Ingestion Pipelines for Private Donation Data Warehouse</h4>
+		<h5 class="showcase-gap showcase-light ">Backend/Data Engineer at Norwegian Refugee Council during
+			2021</h5>
+
+		<p>Implemented a series of proof of concept data pipelines to retrieve data from a variety of sources including: Google Analytics, Facebook ads, Typeform, Stripe and others.</p>
+		<p>The proof of concept pipelines were developed as Python notebooks using the hosted notebooks feature in the Azure Machine Learning platform.</p>
+		<p>Pipelines retrieved data from the various sources and then wrote the results to staging tables in Snowflake.</p>
+		<p>A data analyst was trained on scheduling and working with the pipelines.</p>
 
 		<hr>
 
@@ -224,6 +241,7 @@
 	<section id="demo" class="our-work">
 		<h3 class="title">Demos</h3>
 		<p>A selection of small applications which can be viewed online</p>
+		<p>This section is mostly for fun at the moment, but more relevant demos may come soon!</p>
 		<hr>
 
 		<h4 class="showcase-gap title">International Space Station Tracker</h4>
@@ -238,8 +256,20 @@
 		<br>
 
 		<hr>
-	</section>
 
+		<h4 class="showcase-gap title">Project Submission: Introduction to Programming I</h4>
+		<h5 class="showcase-gap showcase-light ">Minigame built with p5.js</h5>
+
+		<p>A minigame featuring the Golang gopher submitted as a final project for the University of London B.Sc. Computer Science course, Introduction to Programming I</p>
+
+		<a href="https://shinroo.github.io/itp1_game/">
+			<img src="/assets/img/itp1_game.png" style="width: 350px;">
+		</a>
+
+		<br>
+
+		<hr>
+	</section>
 
 	<section id="contact" class="contact">
 		<h3 class="title">Contact Me</h3>
