bugfix: broken link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header>
 		<h2>Showcase</h2>
 		<nav>
-			<li><a href="#portfolio">Contributions</a></li>
+			<li><a href="#contributions">Contributions</a></li>
 			<li><a href="#skillset">Skillset</a></li>
 			<li><a href="#cases">Case Studies</a></li>
 			<li><a href="#talks">Talks</a></li>
