--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</section>
 
 
-	<section id="portfolio" class="our-work">
+	<section id="contributions" class="our-work">
 		<h3 class="title">Contributions</h3>
 		<img src="https://github-readme-stats.vercel.app/api?username=shinroo&count_private=true&show_icons=true&hide=contribs">
 		<br>
