--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
 
 	<section id="contributions" class="our-work">
 		<h3 class="title">Contributions</h3>
+		<p>Most of my work takes place on Github, my latest contributions can be seen in the widget</p>
 		<img src="https://github-readme-stats.vercel.app/api?username=shinroo&count_private=true&show_icons=true&hide=contribs">
 		<br>
+		<a href="https://github.com/Rapsssito/github-profile-badge"><small>Credit to widget creator</small></a>
+		<br>
 		<hr>
-		<p>Projects I have contributed to and companies I have worked for</p>
+		<p>I've contributed to software and date oriented projects across a variety of sectors in multiple roles. Some of the projects I've contributed to and companies I've worked for are listed here:</p>
 
 		<ul class="grid" id="projects-logos">
 
@@ -77,42 +80,34 @@
 
 	<section id="skillset" class="features">
 		<h3 class="title">Skillset</h3>
-		<p>What I bring to the table</p>
+		<p>I'm a generalist developer with mainly backend and data engineering experience. I've used many technologies and I believe that the choice of technology for a project depends on it's requirements and should not depend solely on the experience of the implementors. That being said, I do find it helpful to list some of my preferred technologies below to help illustrate what I've enjoyed using in the past:</p>
 		<hr>
 
 		<ul class="grid">
 			<li>
-				<i class="fa fa-terminal"></i>
-				<h4>Operations</h4>
-				<ul>
-					<li>Kubernetes</li>
-					<li>Serverless</li>
-					<li>Docker, Docker-Compose</li>
-					<li>Proficient in using Amazon Web Services</li>
-					<li>Infrastructure as Code with Terraform</li>
-				</ul>
-			</li>
-			<li>
 				<i class="fa fa-code"></i>
-				<h4>Development</h4>
-				<ul>
-					<li>Python, Golang</li>
-					<li>Clean, Maintainable Code</li>
-					<li>MySQL, PostgresSQL, MongoDB</li>
-					<li>Airflow, Metabase</li>
-				</ul>
+				<h4>Software Engineering</h4>
+				<img alt="Python" class="rectangle" src="assets/img/python-vector.svg" width="220vw">
+				<img alt="Go" class="rectangle" src="assets/img/go.svg" width="190vw">
+				<img alt="PostgresSQL" class="rectangle" src="assets/img/postgres.png" width="220vw">
+				<img alt="MongoDB" class="rectangle" src="assets/img/mongo.svg" width="200vw">
 			</li>
 			<li>
-				<i class="fas fa-sitemap"></i>
-				<h4>Architecture</h4>
-				<ul>
-					<li>Modular Development</li>
-					<li>Leveraging High Quality Open Source Solutions</li>
-					<li>Best Practices</li>
-					<li>Automated documentation</li>
-				</ul>
+				<i class="fas fa-database"></i>
+				<h4>Data Engineering</h4>
+				<img alt="Apache Airflow" class="rectangle" src="assets/img/airflow.png" width="200vw">
+				<img alt="Metabase" class="rectangle" src="assets/img/metabase.svg" width="200vw">
+				<img alt="Argo Workflows" class="rectangle" src="assets/img/argo.svg" width="200vw">
 			</li>
-			</div>
+			<li>
+				<i class="fa fa-terminal"></i>
+				<h4>Developer Operations</h4>
+				<img alt="Serverless Framework" class="rectangle" src="assets/img/serverless.png" width="200vw">
+				<img alt="Amazon Web Services" class="rectangle" src="assets/img/aws.png" width="200vw">
+				<img alt="Docker, Docker-Compose" class="rectangle" src="assets/img/docker.png" width="200vw">
+				<img alt="Infrastructure as Code with Terraform" class="rectangle" src="assets/img/terraform.jpeg" width="220vw">
+			</li>
+		</ul>
 	</section>
 
 	<section id="cases" class="our-work">
@@ -273,12 +268,26 @@
 
 	<section id="contact" class="contact">
 		<h3 class="title">Contact Me</h3>
-		<p>Reach out to me on Github or Linkedin or send me an email.</p>
-		<hr>
+		<p>Reach out to me directly</p>
 
 		<form>
 			<a href="mailto:robert.focke@member.fsf.org" class="btn">Email me</a>
 		</form>
+
+		<br>
+		<br>
+		<hr>
+
+		<p>Recruiters please reach out via any of the following platforms:</p>
+		<div style="display:flex; flex-direction: row;">
+			<form style="margin: 2%;">
+				<a href="https://cord.co/candidate/account/u/candidate/50287" class="btn">Cord</a>
+			</form>
+			<form style="margin: 2%;">
+				<a href="https://www.linkedin.com/in/robertfocke/" class="btn">Linkedin</a>
+			</form>
+		</div>
+		
 	</section>
 
 	<footer>
