--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<a href="https://github.com/Rapsssito/github-profile-badge"><small>Credit to widget creator</small></a>
 		<br>
 		<hr>
-		<p>I've contributed to software and date oriented projects across a variety of sectors in multiple roles. Some of the projects I've contributed to and companies I've worked for are listed here:</p>
+		<p>I've contributed to software- and data-oriented projects across a variety of sectors in multiple roles. Some of the projects I've contributed to and companies I've worked for are listed here:</p>
 
 		<ul class="grid" id="projects-logos">
 
