Update headline and CV

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<section id="home" class="hero">
 		<div class="background-image" style="background-image: url(assets/img/python.jpg);"></div>
 		<h1>Robert Focke</h1>
-		<h3>Backend Engineer, Computer Scientist</h3>
+		<h3>Software Engineer, Computer Scientist</h3>
 		<a href="assets/pdf/cv_robert_focke.pdf" class="btn">Curriculum Vitae</a>
 	</section>
 
