switch to mix-blend-mode hard-light

--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
 		<ul class="grid" id="projects-logos">
 
 			<a href="https://hikaya.io">
-				<li class="square" style="background-image: url(assets/img/hikaya-logo.svg); mix-blend-mode: color-burn; background: #fff;"></li>
+				<li class="square" style="background-image: url(assets/img/hikaya-logo.svg); mix-blend-mode: hard-light; background: #fff;"></li>
 			</a>
 			<a href="https://www.institut-fuer-menschenrechte.de/">
-				<li class="rectangle" style="background-image: url(assets/img/dimr_logo.jpg); mix-blend-mode: color-burn; background: #fff;"></li>
+				<li class="rectangle" style="background-image: url(assets/img/dimr_logo.jpg); mix-blend-mode: hard-light; background: #fff;"></li>
 			</a>
 			<a href="https://hometogo.de">
-				<li class="square" style="background-image: url(assets/img/hometogo-square-white.webp); mix-blend-mode: color-burn; background: #fff;"></li>
+				<li class="square" style="background-image: url(assets/img/hometogo-square-white.webp); mix-blend-mode: hard-light; background: #fff;"></li>
 			</a>
 			<a href="https://sap.com">
-				<li class="square" style="background-image: url(assets/img/sap-icn.png); mix-blend-mode: color-burn; background: #fff;"></li>
+				<li class="square" style="background-image: url(assets/img/sap-icn.png); mix-blend-mode: hard-light; background: #fff;"></li>
 			</a>
 			<a href="https://mesg.ai">
-				<li class="rectangle" style="background-image: url(assets/img/mesg_ai.svg); mix-blend-mode: color-burn; background: #fff;"></li>
+				<li class="rectangle" style="background-image: url(assets/img/mesg_ai.svg); mix-blend-mode: hard-light; background: #fff;"></li>
 			</a>
 			<a href="https://nrc.no">
-				<li class="square" style="background-image: url(assets/img/nrc.png); mix-blend-mode: color-burn; background: #fff;"></li>
+				<li class="square" style="background-image: url(assets/img/nrc.png); mix-blend-mode: hard-light; background: #fff;"></li>
 			</a>
 			<a href="https://muzz.com/en-GB">
-				<li class="rectangle" style="background-image: url(assets/img/muzz.png); mix-blend-mode: color-burn; background: #fff;"></li>
+				<li class="rectangle" style="background-image: url(assets/img/muzz.png); mix-blend-mode: hard-light; background: #fff;"></li>
 			</a>
 			<a href="https://github.com/reading-tribe">
-				<li class="square" style="background-image: url(assets/img/zula.png); mix-blend-mode: color-burn; background: #fff;"></li>
+				<li class="square" style="background-image: url(assets/img/zula.png); mix-blend-mode: hard-light; background: #fff;"></li>
 			</a>
 
 		</ul>
