add open graph tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<meta property="og:title" content="Robert Focke" />
+    <meta 
+		property="og:description" 
+		content="Software Engineer specialising in backend web development and data engineering" 
+	/>
+    <meta property="og:url" content="https://shinroo.github.io" />
+    <meta
+      property="og:image"
+      content="https://avatars.githubusercontent.com/u/15915453?v=4"
+    />
+
 	<title>Robert Focke</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
