fix broken images on NRC page

--- a/pages/companies/nrc.html
+++ b/pages/companies/nrc.html
@@ -59,8 +59,8 @@
         <p>The Norwegian Refugee Council (NRC, Norwegian: Flyktninghjelpen) is a humanitarian, non-governmental organisation that protects the rights of people affected by displacement. This includes refugees and internally displaced persons who are forced to flee their homes as a result of conflict, human rights violations and acute violence, as well as climate change and natural disasters.</p>
         <p>I spent just under 3 years at the Norwegian Refugee Council working as a member of the Digital Transformation team located in Berlin. The digital transformation team was created to spearhead NRC's strategic initiative to utilize technology to provide better services to refugees and internally displaced people areound the world. Reporting directly to the CIO of the NRC, the D-Team is the highest technical capacity in the organisation aiming to work on organisation-wide solutions.</p>
         <div style="display: flex; flex-direction: row; gap: 10px;">
-            <img alt="Working with the D-Team in the NRC Berlin Office" class="square" src="assets/img/nrc_office.jpeg" width="200vw">
-            <img alt="Field visit in Donetsk Oblast, Ukraine" class="square" src="assets/img/nrc_ukraine.jpeg" width="200vw">
+            <img alt="Working with the D-Team in the NRC Berlin Office" class="square" src="../../assets/img/nrc_office.jpeg" width="200vw">
+            <img alt="Field visit in Donetsk Oblast, Ukraine" class="square" src="../../assets/img/nrc_ukraine.jpeg" width="200vw">
         </div>
 
         <br>
