--- a/pages/companies/sap.html
+++ b/pages/companies/sap.html
@@ -90,6 +90,8 @@
 			<li><a href="https://www.linkedin.com/in/robertfocke/"><i class="fab fa-linkedin"></i></a></li>
 			<li><a href="https://github.com/shinroo"><i class="fab fa-github"></i></a></li>
 		</ul>
+		<br>
+		<a href="impressum.html">Impressum</a>
 	</footer>
 
 </body>
