--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			<li><a href="https://github.com/shinroo"><i class="fab fa-github"></i></a></li>
 		</ul>
 		<br>
-		<a href="pages/impressum.html">Impressum</a>
+		<a href="pages/general/impressum.html">Impressum</a>
 	</footer>
 
 </body>
