--- a/pages/companies/mesg.html
+++ b/pages/companies/mesg.html
@@ -83,7 +83,7 @@
 			<li><a href="https://github.com/shinroo"><i class="fab fa-github"></i></a></li>
 		</ul>
 		<br>
-		<a href="impressum.html">Impressum</a>
+		<a href="../general/impressum.html">Impressum</a>
 	</footer>
 
 </body>
