--- a/pages/general/impressum.html
+++ b/pages/general/impressum.html
@@ -36,7 +36,7 @@
 <body>
 
 	<header>
-		<h2>Job Overview</h2>
+		<h2>Legal</h2>
 		<nav>
 			<li><a href="/">Home</a></li>
             <li><a href="#impressum">Impressum</a></li>
