--- a/pages/companies/zula.html
+++ b/pages/companies/zula.html
@@ -47,7 +47,7 @@
 	<section id="home" class="hero">
 		<div class="background-image" style="background-image: url(../../assets/img/python.jpg);"></div>
 		<h1>Robert Focke</h1>
-		<h3>Lead Developer, Zula The Reading Tribe</h3>
+		<h3>Technical Co-Founder, Zula The Reading Tribe</h3>
         <a href="https://github.com/reading-tribe" class="btn">Visit Website</a>
 	</section>
 
@@ -56,23 +56,30 @@
         <ul class="grid" id="projects-logos">
 			<li class="square our-work-logo" id="logo-zula"></li>
         </ul>
-        <p>Zula is on a mission to amplify diversity and inclusion in children's libraries and bookshelves around the globe!</p>
-    </section>
+        <p>Zula is on a mission to amplify diversity and inclusion in children's libraries and bookshelves around the globe! The project aimed to translate children's books and provide them to parents and children via mobile and web-based applications.</p>
+		<p>I was asked to be a co-founder by Alain Missala, the founder of the project, and was involved for the first 2 years of it's existence. I lead all the technical work in the project, from kickstarting a React based web-app to setting up scrapers to collect books for translation. I also delivered a serverless backend to drive the web application.</p>
+		<p>As a founding team, we worked together to set up a business plan to secure initial funding through House of Resources Berlin, an organisation supported by the German ministry for Interior and Homeland Affairs.</p>
+	
+		<div style="display: flex; flex-direction: row; gap: 10px;">
+            <img alt="House of Resources Berlin logo" class="square" src="../../assets/img/hor.png" width="200vw">
+            <img alt="Bundesministerium des Innern und für Heimat logo" class="square" src="../../assets/img/bmi.svg" width="200vw">
+        </div>
+	</section>
 
     <section id="key-contributions" class="features">
 		<h3 class="title">Key Contributions</h3>
 
 		<h4 class="showcase-gap title">Web scraping open source book projects</h4>
-		<h5 class="showcase-gap showcase-light ">Lead Developer, 2021</h5>
+		<h5 class="showcase-gap showcase-light ">Technical Co-Founder, 2021</h5>
 
-		<p></p>
+		<p>Set up webscrapers with Python to download a 200+ books from public domain book projects. Post-processing of books into specific folder structure for translators to translate books into German and French.</p>
 
 		<hr>
 
         <h4 class="showcase-gap title">Development of API serving mobile applications</h4>
-		<h5 class="showcase-gap showcase-light ">Lead Developer, 2021</h5>
+		<h5 class="showcase-gap showcase-light ">Technical Co-Founder, 2021</h5>
 
-		<p></p>
+		<p>I used Golang, DynamoDB, S3 and AWS Lambda to deliver a low-cost and scalable API to power the mobile and web applications under development by Zula.</p>
 
 		<hr>
 	</section>
