add SAP + Google partnership logo

--- a/pages/companies/sap.html
+++ b/pages/companies/sap.html
@@ -70,6 +70,10 @@
 		<p>As part of this work stream, I developed a proof of concept service written in Python with Flask which proxied the speech-to-text APIs available on Google Cloud Platform. This involved communication with colleagues at Google and SAP and developing a demo of the service using Jinja and JavaScript, which was presented to the VP in charge of SAP Leonardo.</p>
 		<p>I worked with a Senior Software Engineer to productionise the service for deployment on SAP's CloudFoundry infrastructure.</p>
 
+		<div style="display: flex; flex-direction: row; gap: 10px;">
+            <img alt="SAP Google Cloud partnership logo" class="rectangle" src="../../assets/img/sap_google.jpeg" width="400vw">
+        </div>
+
 		<hr>
 
         <h4 class="showcase-gap title">Containerised and productionised Abbyy OCR service</h4>
