add more styles to SAP Google logo

--- a/pages/companies/sap.html
+++ b/pages/companies/sap.html
@@ -71,7 +71,7 @@
 		<p>I worked with a Senior Software Engineer to productionise the service for deployment on SAP's CloudFoundry infrastructure.</p>
 
 		<div style="display: flex; flex-direction: row; gap: 10px;">
-            <img alt="SAP Google Cloud partnership logo" class="rectangle" src="../../assets/img/sap_google.jpeg" width="400vw">
+            <img alt="SAP Google Cloud partnership logo" class="rectangle features-logo" src="../../assets/img/sap_google.jpeg" width="400vw">
         </div>
 
 		<hr>
