--- a/pages/companies/dimr.html
+++ b/pages/companies/dimr.html
@@ -58,15 +58,19 @@
         </ul>
         <p>The German Institute for Human Rights (GIHR) contributes to the promotion and the protection of human rights mainly by offering policy advice and raising awareness on human rights issues with relevance both for the domestic and international spheres.</p>
         <p>The GIHR addresses policy and law makers, as well as civil society actors, at all levels of the federal structure of Germany with a variety of formats: policy papers and legal analyses, monitoring reports, expert panels and seminars, human rights education and training programs, as well as documentation and library services.</p>
-    </section>
+		<p>I was recruited to work with the institute on a part-time basis, collaborating with researchers and legal experts in the international human rights politics department.</p>
+	</section>
 
     <section id="key-contributions" class="features">
 		<h3 class="title">Key Contributions</h3>
 
-		<h4 class="showcase-gap title">Replacing PHP monolith with Go microservices</h4>
-		<h5 class="showcase-gap showcase-light ">Senior Backend Engineer, 2022</h5>
+		<h4 class="showcase-gap title">End-to-end data work on a media analysis project</h4>
+		<h5 class="showcase-gap showcase-light ">Data Engineer, 2019-2020</h5>
 
-		<p></p>
+		<p>Delivered an end-to-end data project from data collection to operations and analysis on a minimal budget. The data work was used by researchers to analyse large amounts of data in a summarised fashion.</p>
+		<p>Wrote self-learning webscrapers which retrieved page content, author details and date from various blogs, news sites and social media. The scrapers were implemented in python using Scrapy, and autoscraper</p>
+		<p>Various NLP tasks were carried out on the collected data, in order to extract trends in the topics which were being discussed. Both scraping and analysis pipelines were hosted on a Digital Ocean Kubernetes cluster.</p>
+		<p>Set up text-based indices using pg-trigram and postgres to speed up metabase dashboard load times. Dashboards were developed in an iterative fashion with feedback from the stakeholders of the project.</p>
 
 		<hr>
 	</section>
