integrate visitor analytics

--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
 		<a href="pages/general/impressum.html">Impressum</a>
 	</footer>
 
+	<script src="js/visitor-analytics.js"></script>
+
 </body>
 
 </html>
