--- a/pages/companies/mesg.html
+++ b/pages/companies/mesg.html
@@ -86,6 +86,8 @@
 		<a href="../general/impressum.html">Impressum</a>
 	</footer>
 
+	<script src="../../js/visitor-analytics.js"></script>
+
 </body>
 
 </html>
