--- a/pages/companies/sap.html
+++ b/pages/companies/sap.html
@@ -102,6 +102,8 @@
 		<a href="../general/impressum.html">Impressum</a>
 	</footer>
 
+	<script src="../../js/visitor-analytics.js"></script>
+
 </body>
 
 </html>
