--- a/pages/companies/friday.html
+++ b/pages/companies/friday.html
@@ -85,6 +85,8 @@
 		<a href="../general/impressum.html">Impressum</a>
 	</footer>
 
+	<script src="../../js/visitor-analytics.js"></script>
+
 </body>
 
 </html>
