--- a/pages/companies/muzz.html
+++ b/pages/companies/muzz.html
@@ -79,6 +79,8 @@
 		<a href="../general/impressum.html">Impressum</a>
 	</footer>
 
+	<script src="../../js/visitor-analytics.js"></script>
+
 </body>
 
 </html>
