--- a/pages/companies/nrc.html
+++ b/pages/companies/nrc.html
@@ -130,6 +130,8 @@
 		<a href="../general/impressum.html">Impressum</a>
 	</footer>
 
+	<script src="../../js/visitor-analytics.js"></script>
+
 </body>
 
 </html>
