--- a/pages/companies/nrc.html
+++ b/pages/companies/nrc.html
@@ -130,7 +130,9 @@
 		<a href="../general/impressum.html">Impressum</a>
 	</footer>
 
-	<script src="../../js/visitor-analytics.js"></script>
+	<!-- VISA Tracking Code for shinroo.github.io -->
+	<script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','600581bd-817b-11ed-b589-901b0edac50a','va')</script>
+	<!-- VISA Tracking Code for shinroo.github.io -->
 
 </body>
 
